zod_gen_derive/tests/ui/internal_tag_string_newtype.stderr
error: #[serde(tag = "...")] cannot be used with tuple variants
 --> tests/ui/internal_tag_string_newtype.rs
  |
  |     Payload(String),
  |     ^^^^^^^^^^^^^^^
